--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 }
 
 body {
-  background-color: aliceblue;
+  background-color: rgb(179, 154, 125);
   text-align: center;
-  color: navy;
+  color: rgb(85, 52, 30);
   margin: auto;
   font-family: water;
 }
@@ -16,10 +16,10 @@ h1{
 }
 
 #myCanvas {
-  background-image: url("https://seaviewinfo.com/wp-content/uploads/2018/07/SeaScape.jpg");
+  background-image: url("https://i.pinimg.com/474x/72/54/ab/7254aba7ff6d5801925d5a641c935eb5.jpg");
   background-size: 600px 400px;
   border-radius: 300px;
-  border: 5px solid white;
+  border: 5px solid rgb(77, 54, 29);
 }
 
 
